flapivor/tests/m1/hopix/parser/bad/90-case-3.hopix
val menu =
  case choice {
  | Coffee || Tea => OK
  | Chocolate => OK
  | Beer => AreYouSure
  | _ => KO
  }